tests/baselines/reference/parserVariableDeclaration4.errors.txt
parserVariableDeclaration4.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserVariableDeclaration4.ts(2,4): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== parserVariableDeclaration4.ts (2 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
       declare var v;
       ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
    }